tests/ui/feature-gates/feature-gate-asm_goto_with_outputs.stderr
error[E0658]: using both label and output operands for inline assembly is unstable
  --> $DIR/feature-gate-asm_goto_with_outputs.rs:8:52
   |
LL |         asm!("mov {}, 1", "jmp {}", out(reg) _out, label {});
   |                                                    ^^^^^^^^
   |
   = note: see issue #119364 <https://github.com/rust-lang/rust/issues/119364> for more information
   = help: add `#![feature(asm_goto_with_outputs)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
